form checkbox changed to textarea

--- a/media-links.html
+++ b/media-links.html
@@ -231,42 +231,15 @@
             />
           </fieldset>
           <fieldset>
-            <div class="checkbox-buttons">
-              <label for="media-choice-book">Books</label>
-              <div>
-                <input
-                  type="checkbox"
-                  name="media-choice"
-                  id="media-choice-book"
-                  value="books"
-                  required
-                />
-              </div>
-            </div>
-            <div class="checkbox-buttons">
-              <label for="media-choice-film">Films</label>
-              <div>
-                <input
-                  type="checkbox"
-                  name="media-choice"
-                  id="media-choice-film"
-                  value="films"
-                  required
-                />
-              </div>
-            </div>
-            <div class="checkbox-buttons">
-              <label for="media-choice-doc">Documentaries</label>
-              <div>
-                <input
-                  type="checkbox"
-                  name="media-choice"
-                  id="media-choice-doc"
-                  value="documentary"
-                  required
-                />
-              </div>
-            </div>
+            <label for="media-choice-doc">Please specify what you wish</label>
+            <textarea
+              name="media-choice-doc"
+              id="media-choice-doc"
+              cols="30"
+              rows="10"
+              style="width: 100%"
+              required
+            ></textarea>
           </fieldset>
           <button type="submit" class="button">Submit</button>
         </form>
@@ -291,7 +264,6 @@
             style="margin-top: -2rem"
           />
           <p class="footer-external-text">Visit St Nazaire</p>
-          s
         </a>
       </section>
       <section class="footer-section">
