--- a/media-links.html
+++ b/media-links.html
@@ -263,7 +263,7 @@
             class="footer-external-imgs"
             style="margin-top: -2rem"
           />
-          <p class="footer-external-text">Visit St Nazaire</p>
+          <span class="footer-external-text">Visit St Nazaire</span>
         </a>
       </section>
       <section class="footer-section">
@@ -280,7 +280,7 @@
             class="footer-external-imgs"
             style="max-width: 100%; padding-top: 1rem"
           />
-          <p class="footer-external-text">Dan Snow's History Hit</p>
+          <span class="footer-external-text">Dan Snow's History Hit</span>
         </a>
       </section>
       <section class="footer-section">
@@ -297,7 +297,7 @@
             class="footer-external-imgs"
             style="margin-top: -2rem"
           />
-          <p class="footer-external-text">Declassifeid war Documents</p>
+          <span class="footer-external-text">Declassifeid war Documents</span>
         </a>
       </section>
     </footer>
