--- a/index.html
+++ b/index.html
@@ -359,8 +359,7 @@
             class="footer-external-imgs"
             style="margin-top: -2rem"
           />
-          <p class="footer-external-text">Visit St Nazaire</p>
-          s
+          <span class="footer-external-text">Visit St Nazaire</span>
         </a>
       </section>
       <section class="footer-section">
@@ -377,7 +376,7 @@
             class="footer-external-imgs"
             style="max-width: 100%; padding-top: 1rem"
           />
-          <p class="footer-external-text">Dan Snow's History Hit</p>
+          <span class="footer-external-text">Dan Snow's History Hit</span>
         </a>
       </section>
       <section class="footer-section">
@@ -394,7 +393,7 @@
             class="footer-external-imgs"
             style="margin-top: -2rem"
           />
-          <p class="footer-external-text">Declassifeid war Documents</p>
+          <span class="footer-external-text">Declassifeid war Documents</span>
         </a>
       </section>
     </footer>
