--- a/signup-confirmation.html
+++ b/signup-confirmation.html
@@ -111,8 +111,7 @@
             class="footer-external-imgs"
             style="margin-top: -2rem"
           />
-          <p class="footer-external-text">Visit St Nazaire</p>
-          s
+          <span class="footer-external-text">Visit St Nazaire</span>
         </a>
       </section>
       <section class="footer-section">
@@ -129,7 +128,7 @@
             class="footer-external-imgs"
             style="max-width: 100%; padding-top: 1rem"
           />
-          <p class="footer-external-text">Dan Snow's History Hit</p>
+          <span class="footer-external-text">Dan Snow's History Hit</span>
         </a>
       </section>
       <section class="footer-section">
@@ -146,7 +145,7 @@
             class="footer-external-imgs"
             style="margin-top: -2rem"
           />
-          <p class="footer-external-text">Declassifeid war Documents</p>
+          <span class="footer-external-text">Declassifeid war Documents</span>
         </a>
       </section>
     </footer>
