--- a/media-links.html
+++ b/media-links.html
@@ -32,12 +32,11 @@
       <!-- nav bar for mobile -->
       <div class="mobile-navbar">
         <div class="container mobile-navbar-container">
-          <label for="header-checkbox" style="display: none"
+          <label for="nav-mobile-checkbox" style="display: none"
             >mobile header checkbox</label
           >
           <input
-            id="header-checkbox"
-            class="checkbox"
+            id="nav-mobile-checkbox"
             type="checkbox"
             name="nav-mobile-checkbox"
           />
@@ -51,9 +50,9 @@
               id="mobile-navlinks-logo"
             />
             <ul style="height: 40rem">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="index.html" class="active">Home</a></li>
               <li><a href="gallery.html">Gallery</a></li>
-              <li><a href="media-links.html" class="active">Mutli Media</a></li>
+              <li><a href="media-links.html">Mutli Media</a></li>
             </ul>
           </nav>
         </div>
@@ -61,9 +60,9 @@
       <!-- nav bar for non mobile -->
       <nav class="lg-screen-navbar">
         <ul id="navlinks">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="media-links.html" class="active">Mutli Media</a></li>
+          <li><a href="media-links.html">Mutli Media</a></li>
         </ul>
       </nav>
     </header>
