removed inline css from index html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- nav bar for mobile -->
       <div class="mobile-navbar">
         <div class="container mobile-navbar-container">
-          <label for="nav-mobile-checkbox" style="display: none"
+          <label class="display-none" for="nav-mobile-checkbox "
             >mobile header checkbox</label
           >
           <input
@@ -49,7 +49,7 @@
               alt="british commando insignia"
               id="mobile-navlinks-logo"
             />
-            <ul style="height: 40rem">
+            <ul>
               <li><a href="index.html" class="active">Home</a></li>
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="media-links.html">Mutli Media</a></li>
@@ -71,7 +71,7 @@
     <main>
       <!-- main top image  -->
       <section class="hero">
-        <h2 style="display: none">hero slider</h2>
+        <h2 class="display-none">hero slider</h2>
         <div class="slide-show-container">
           <div class="wrapper-one">
             <div class="wrapper-text">
@@ -324,9 +324,7 @@
           </p>
         </section>
         <section class="st-nazaire-main-content">
-          <h2 class="st-nazaire-main-content-header" style="text-align: center">
-            Memorial Inscription
-          </h2>
+          <h2 class="st-nazaire-main-content-header">Memorial Inscription</h2>
           <figure class="st-nazaire-memorial">
             <img
               src="assets/images/operation-chariot-memorial-closeup.webp"
@@ -343,10 +341,10 @@
     </main>
     <!-- footer -->
     <footer>
-      <h2 style="display: none">website footer</h2>
+      <h2 class="display-none">website footer</h2>
       <!-- footer external links -->
       <section class="footer-section">
-        <h2 style="display: none">website footer external links</h2>
+        <h2 class="display-none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -356,14 +354,13 @@
           <img
             src="assets/images/reversed-r-red.svg"
             alt="logo of St Nazaire website"
-            class="footer-external-imgs"
-            style="margin-top: -2rem"
+            class="footer-external-imgs footer-img-margin"
           />
           <span class="footer-external-text">Visit St Nazaire</span>
         </a>
       </section>
       <section class="footer-section">
-        <h2 style="display: none">website footer external links</h2>
+        <h2 class="display-none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -373,14 +370,13 @@
           <img
             src="assets/images/history-hit.png"
             alt="History Hit Logo"
-            class="footer-external-imgs"
-            style="max-width: 100%; padding-top: 1rem"
+            class="footer-external-imgs footer-history-img"
           />
           <span class="footer-external-text">Dan Snow's History Hit</span>
         </a>
       </section>
       <section class="footer-section">
-        <h2 style="display: none">website footer external links</h2>
+        <h2 class="display-none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -390,8 +386,7 @@
           <img
             src="assets/images/top-secrect.png"
             alt=" top secret image of classfied documents"
-            class="footer-external-imgs"
-            style="margin-top: -2rem"
+            class="footer-external-imgs footer-img-margin"
           />
           <span class="footer-external-text">Declassifeid war Documents</span>
         </a>
