removed inline css from gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,7 @@
       <!-- nav bar for mobile -->
       <div class="mobile-navbar">
         <div class="container mobile-navbar-container">
-          <label for="nav-mobile-checkbox" style="display: none"
+          <label class="display-none" for="nav-mobile-checkbox "
             >mobile header checkbox</label
           >
           <input
@@ -49,7 +49,7 @@
               alt="british commando insignia"
               id="mobile-navlinks-logo"
             />
-            <ul style="height: 40rem">
+            <ul>
               <li><a href="index.html" class="active">Home</a></li>
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="media-links.html">Mutli Media</a></li>
@@ -77,18 +77,17 @@
           <img
             src="assets/images/aerial-reconnaissance.webp"
             alt="aerial reconnaissance of St Nazaire"
-            style="width: 100%"
-            class="myDIV"
+            class="gallery-img-size"
           />
           <img
             src="assets/images/caputred-commandos-2.webp"
             alt="caputred commando soliders after the raid"
-            style="width: 100%"
+            class="gallery-img-size"
           />
           <img
             src="assets/images/caputred-commandos.webp"
             alt="caputred commando soliders after the raid"
-            style="width: 100%"
+            class="gallery-img-size"
           />
         </div>
         <!-- second colum -->
@@ -96,22 +95,22 @@
           <img
             src="assets/images/hms-campbeltown-hit-dock.webp"
             alt="HMS campbeltown after hitting the dock"
-            style="width: 100%"
+            class="gallery-img-size"
           />
           <img
             src="assets/images/hms-campbeltown-wedged-in-dock.webp"
             alt="HMS campbeltown wedged into the dock"
-            style="width: 100%"
+            class="gallery-img-size"
           />
           <img
             src="assets/images/hms-campbeltown.webp"
             alt="HMS campbeltown image before the raid"
-            style="width: 100%"
+            class="gallery-img-size"
           />
           <img
             src="assets/images/hms-campbeltown-conversion.webp"
             alt="HMS campbeltown being converted"
-            style="width: 100%"
+            class="gallery-img-size"
           />
         </div>
         <!-- third colum -->
@@ -119,22 +118,22 @@
           <img
             src="assets/images/st-nazaire-aftermath.webp"
             alt="aerial photo of the aftermath of the raid"
-            style="width: 100%"
+            class="gallery-img-size"
           />
           <img
             src="assets/images/lt-col-r.k.-montgomery.webp"
             alt="picture of Lt Col R.K -Montgomery"
-            style="width: 100%"
+            class="gallery-img-size"
           />
           <img
             src="assets/images/wounded-solider.webp"
             alt="image of a caputred wounded solider"
-            style="width: 100%"
+            class="gallery-img-size"
           />
           <img
             src="assets/images/st-nazaire-hms-campbeltown-3.webp"
             alt="HMS Campbeltown from another angle wedged in dock"
-            style="width: 100%"
+            class="gallery-img-size"
           />
         </div>
         <!-- fourth colum -->
@@ -142,27 +141,27 @@
           <img
             src="assets/images/modification-to-campbeltown.webp"
             alt="diagram showing modification to be made"
-            style="width: 100%"
+            class="gallery-img-size"
           />
           <img
             src="assets/images/plan-of-attack.webp"
             alt="photographic with notes showing plan of attack"
-            style="width: 100%"
+            class="gallery-img-size"
           />
           <img
             src="assets/images/german-troops-next-day.webp"
             alt="german troops clearing St Nazaire next day"
-            style="width: 100%"
+            class="gallery-img-size"
           />
           <img
             src="assets/images/motorboat.webp"
             alt="Motorboat used in the raid"
-            style="width: 100%"
+            class="gallery-img-size"
           />
           <img
             src="assets/images/german-tirptz.webp"
             alt="picture of tirptz from the air"
-            style="width: 100%"
+            class="gallery-img-size"
           />
         </div>
       </div>
@@ -340,10 +339,10 @@
     </main>
     <!-- footer -->
     <footer>
-      <h2 style="display: none">website footer</h2>
+      <h2 class="display-none">website footer</h2>
       <!-- footer external links -->
       <section class="footer-section">
-        <h2 style="display: none">website footer external links</h2>
+        <h2 class="display-none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -353,14 +352,13 @@
           <img
             src="assets/images/reversed-r-red.svg"
             alt="logo of St Nazaire website"
-            class="footer-external-imgs"
-            style="margin-top: -2rem"
+            class="footer-external-imgs footer-img-margin"
           />
           <span class="footer-external-text">Visit St Nazaire</span>
         </a>
       </section>
       <section class="footer-section">
-        <h2 style="display: none">website footer external links</h2>
+        <h2 class="display-none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -370,14 +368,13 @@
           <img
             src="assets/images/history-hit.png"
             alt="History Hit Logo"
-            class="footer-external-imgs"
-            style="max-width: 100%; padding-top: 1rem"
+            class="footer-external-imgs footer-history-img"
           />
           <span class="footer-external-text">Dan Snow's History Hit</span>
         </a>
       </section>
       <section class="footer-section">
-        <h2 style="display: none">website footer external links</h2>
+        <h2 class="display-none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -387,8 +384,7 @@
           <img
             src="assets/images/top-secrect.png"
             alt=" top secret image of classfied documents"
-            class="footer-external-imgs"
-            style="margin-top: -2rem"
+            class="footer-external-imgs footer-img-margin"
           />
           <span class="footer-external-text">Declassifeid war Documents</span>
         </a>
