removed inline css from media page

--- a/media-links.html
+++ b/media-links.html
@@ -32,7 +32,7 @@
       <!-- nav bar for mobile -->
       <div class="mobile-navbar">
         <div class="container mobile-navbar-container">
-          <label for="nav-mobile-checkbox" style="display: none"
+          <label class="display-none" for="nav-mobile-checkbox "
             >mobile header checkbox</label
           >
           <input
@@ -49,7 +49,7 @@
               alt="british commando insignia"
               id="mobile-navlinks-logo"
             />
-            <ul style="height: 40rem">
+            <ul>
               <li><a href="index.html" class="active">Home</a></li>
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="media-links.html">Mutli Media</a></li>
@@ -91,7 +91,6 @@
         <!-- first hand account podcast -->
         <h2 class="podcast-header subhead">
           <a
-            style="color: white; text-decoration: none"
             href="https://evergreenpodcasts.com/warriors-in-their-own-words/lt-col-r-k-montgomery-the-st-nazaire-raid"
             target="_blank"
             rel="noopener"
@@ -119,7 +118,7 @@
             class="st-nazaire-books-fig-img"
           />
           <figcaption class="st-nazaire-books-fig-review">
-            <div class="style-test">
+            <div class="st-nazaire-books-fig-review-inner">
               <i class="fa-solid fa-quote-left"></i>
               In the darkest months of the Second World War, Churchill approved
               what seemed to many like a suicide mission. Under orders to attack
@@ -146,12 +145,6 @@
                 href="https://shop.nam.ac.uk/the-greatest-raid-st-nazaire-1942-the-heroic-story.html"
                 target="_blank"
                 rel="noopener"
-                style="
-                  font-size: 2rem;
-                  float: right;
-                  color: white;
-                  text-decoration: underline;
-                "
                 aria-label="buy now link takes you to a page where you can purchase a copy of the book (opens in a new tab)"
                 >Buy Now</a
               >
@@ -167,7 +160,7 @@
             class="st-nazaire-books-fig-img order"
           />
           <figcaption class="st-nazaire-books-fig-review">
-            <div class="style-test">
+            <div class="st-nazaire-books-fig-review-inner">
               <i class="fa-solid fa-quote-left"></i>
               It is the night of 28 March 1942. Royal Navy and British commandos
               are poised to assault the German-held port of Saint-Nazaire in
@@ -191,12 +184,6 @@
                 href="https://www.bookwiseonline.co.uk/into-the-jaws-of-death-3090-p.asp"
                 target="_blank"
                 rel="noopener"
-                style="
-                  font-size: 2rem;
-                  float: right;
-                  color: white;
-                  text-decoration: underline;
-                "
                 aria-label="buy now link takes you to a page where you can purchase a copy of the book (opens in a new tab)"
                 >Buy Now</a
               >
@@ -236,7 +223,6 @@
               id="media-choice-doc"
               cols="30"
               rows="10"
-              style="width: 100%"
               required
             ></textarea>
           </fieldset>
@@ -246,10 +232,10 @@
     </main>
     <!-- footer -->
     <footer>
-      <h2 style="display: none">website footer</h2>
+      <h2 class="display-none">website footer</h2>
       <!-- footer external links -->
       <section class="footer-section">
-        <h2 style="display: none">website footer external links</h2>
+        <h2 class="display-none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -259,14 +245,13 @@
           <img
             src="assets/images/reversed-r-red.svg"
             alt="logo of St Nazaire website"
-            class="footer-external-imgs"
-            style="margin-top: -2rem"
+            class="footer-external-imgs footer-img-margin"
           />
           <span class="footer-external-text">Visit St Nazaire</span>
         </a>
       </section>
       <section class="footer-section">
-        <h2 style="display: none">website footer external links</h2>
+        <h2 class="display-none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -276,14 +261,13 @@
           <img
             src="assets/images/history-hit.png"
             alt="History Hit Logo"
-            class="footer-external-imgs"
-            style="max-width: 100%; padding-top: 1rem"
+            class="footer-external-imgs footer-history-img"
           />
           <span class="footer-external-text">Dan Snow's History Hit</span>
         </a>
       </section>
       <section class="footer-section">
-        <h2 style="display: none">website footer external links</h2>
+        <h2 class="display-none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -293,8 +277,7 @@
           <img
             src="assets/images/top-secrect.png"
             alt=" top secret image of classfied documents"
-            class="footer-external-imgs"
-            style="margin-top: -2rem"
+            class="footer-external-imgs footer-img-margin"
           />
           <span class="footer-external-text">Declassifeid war Documents</span>
         </a>
