removed inline css from signup confirmation

--- a/signup-confirmation.html
+++ b/signup-confirmation.html
@@ -32,7 +32,7 @@
       <!-- nav bar for mobile -->
       <div class="mobile-navbar">
         <div class="container mobile-navbar-container">
-          <label for="nav-mobile-checkbox" style="display: none"
+          <label class="display-none" for="nav-mobile-checkbox "
             >mobile header checkbox</label
           >
           <input
@@ -49,7 +49,7 @@
               alt="british commando insignia"
               id="mobile-navlinks-logo"
             />
-            <ul style="height: 40rem">
+            <ul>
               <li><a href="index.html" class="active">Home</a></li>
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="media-links.html">Mutli Media</a></li>
@@ -68,22 +68,12 @@
     </header>
 
     <!-- main -->
-    <main style="max-width: 100%">
+    <main>
       <h1 class="signup-confirm-header">Thank you for signing up</h1>
 
-      <section
-        class=""
-        style="
-          display: flex;
-          align-items: center;
-          flex-direction: column;
-          height: 60rem;
-        "
-      >
+      <section class="signup-confirm-section">
         <h2 class="signup-confirm-text">
-          <a style="color: white" href="media-links.html"
-            >Return to the media page</a
-          >
+          <a href="media-links.html">Return to the media page</a>
         </h2>
         <img
           src="assets/images/royal-navy-mtb74.webp"
@@ -94,10 +84,10 @@
     </main>
     <!-- footer -->
     <footer>
-      <h2 style="display: none">website footer</h2>
+      <h2 class="display-none">website footer</h2>
       <!-- footer external links -->
       <section class="footer-section">
-        <h2 style="display: none">website footer external links</h2>
+        <h2 class="display-none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -107,14 +97,13 @@
           <img
             src="assets/images/reversed-r-red.svg"
             alt="logo of St Nazaire website"
-            class="footer-external-imgs"
-            style="margin-top: -2rem"
+            class="footer-external-imgs footer-img-margin"
           />
           <span class="footer-external-text">Visit St Nazaire</span>
         </a>
       </section>
       <section class="footer-section">
-        <h2 style="display: none">website footer external links</h2>
+        <h2 class="display-none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -124,14 +113,13 @@
           <img
             src="assets/images/history-hit.png"
             alt="History Hit Logo"
-            class="footer-external-imgs"
-            style="max-width: 100%; padding-top: 1rem"
+            class="footer-external-imgs footer-history-img"
           />
           <span class="footer-external-text">Dan Snow's History Hit</span>
         </a>
       </section>
       <section class="footer-section">
-        <h2 style="display: none">website footer external links</h2>
+        <h2 class="display-none">website footer external links</h2>
         <a
           class="footer-external"
           target="_blank"
@@ -141,8 +129,7 @@
           <img
             src="assets/images/top-secrect.png"
             alt=" top secret image of classfied documents"
-            class="footer-external-imgs"
-            style="margin-top: -2rem"
+            class="footer-external-imgs footer-img-margin"
           />
           <span class="footer-external-text">Declassifeid war Documents</span>
         </a>
