validation re-checked on all html pages

--- a/gallery.html
+++ b/gallery.html
@@ -32,8 +32,8 @@
       <!-- nav bar for mobile -->
       <div class="mobile-navbar">
         <div class="container mobile-navbar-container">
-          <label class="display-none" for="nav-mobile-checkbox "
-            >mobile header checkbox</label
+          <label class="display-none" for="nav-mobile-checkbox">
+            mobile header checkbox</label
           >
           <input
             id="nav-mobile-checkbox"
@@ -50,8 +50,8 @@
               id="mobile-navlinks-logo"
             />
             <ul>
-              <li><a href="index.html" class="active">Home</a></li>
-              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="gallery.html" class="active">Gallery</a></li>
               <li><a href="media-links.html">Mutli Media</a></li>
             </ul>
           </nav>
