--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
       <!-- nav bar for mobile -->
       <div class="mobile-navbar">
         <div class="container mobile-navbar-container">
-          <label class="display-none" for="nav-mobile-checkbox "
-            >mobile header checkbox</label
-          >
+          <label class="display-none" for="nav-mobile-checkbox">
+            mobile header checkbox</label>
           <input
             id="nav-mobile-checkbox"
             type="checkbox"
