--- a/media-links.html
+++ b/media-links.html
@@ -32,8 +32,8 @@
       <!-- nav bar for mobile -->
       <div class="mobile-navbar">
         <div class="container mobile-navbar-container">
-          <label class="display-none" for="nav-mobile-checkbox "
-            >mobile header checkbox</label
+          <label class="display-none" for="nav-mobile-checkbox">
+            mobile header checkbox</label
           >
           <input
             id="nav-mobile-checkbox"
@@ -60,9 +60,9 @@
       <!-- nav bar for non mobile -->
       <nav class="lg-screen-navbar">
         <ul id="navlinks">
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="media-links.html">Mutli Media</a></li>
+          <li><a href="media-links.html" class="active">Mutli Media</a></li>
         </ul>
       </nav>
     </header>
