corrected nav active issue

--- a/media-links.html
+++ b/media-links.html
@@ -50,9 +50,9 @@
               id="mobile-navlinks-logo"
             />
             <ul>
-              <li><a href="index.html" class="active">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="gallery.html">Gallery</a></li>
-              <li><a href="media-links.html">Mutli Media</a></li>
+              <li><a href="media-links.html" class="active">Mutli Media</a></li>
             </ul>
           </nav>
         </div>
