--- a/gallery.html
+++ b/gallery.html
@@ -60,8 +60,8 @@
       <!-- nav bar for non mobile -->
       <nav class="lg-screen-navbar">
         <ul id="navlinks">
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="gallery.html" class="active">Gallery</a></li>
           <li><a href="media-links.html">Mutli Media</a></li>
         </ul>
       </nav>
