--- a/signup-confirmation.html
+++ b/signup-confirmation.html
@@ -50,7 +50,7 @@
               id="mobile-navlinks-logo"
             />
             <ul>
-              <li><a href="index.html" class="active">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="media-links.html">Mutli Media</a></li>
             </ul>
