corrected hover effect on links

--- a/media-links.html
+++ b/media-links.html
@@ -69,7 +69,7 @@
 
     <!-- main -->
     <main>
-      <h1>Media Content</h1>
+      <h1>Mutli Media</h1>
       <!-- youtube video documentary -->
       <section class="youtube-documentary">
         <div class="youtube-documentary-innervid">
@@ -145,6 +145,7 @@
                 href="https://shop.nam.ac.uk/the-greatest-raid-st-nazaire-1942-the-heroic-story.html"
                 target="_blank"
                 rel="noopener"
+                class="buy-hover"
                 aria-label="buy now link takes you to a page where you can purchase a copy of the book (opens in a new tab)"
                 >Buy Now</a
               >
@@ -184,6 +185,7 @@
                 href="https://www.bookwiseonline.co.uk/into-the-jaws-of-death-3090-p.asp"
                 target="_blank"
                 rel="noopener"
+                class="buy-hover"
                 aria-label="buy now link takes you to a page where you can purchase a copy of the book (opens in a new tab)"
                 >Buy Now</a
               >
